--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -12,7 +12,7 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "8.2.12",
+        "@angular/animations": "^8.2.12",
         "@angular/common": "8.2.12",
         "@angular/compiler": "8.2.12",
         "@angular/core": "8.2.12",
@@ -22,14 +22,21 @@
         "@angular/platform-server": "8.2.12",
         "@angular/router": "8.2.12",
         "@nguniversal/module-map-ngfactory-loader": "8.1.1",
+        "@types/jquery": "^3.5.7",
         "bootstrap": "^4.6.0",
         "core-js": "^3.8.3",
-        "jquery": "^3.5.1",
+        "jquery": "^3.6.0",
+        "mercadopago": "^1.5.8",
+        "ngx-mercadopago": "0.0.6",
+        "ngx-spinner": "^12.0.0",
+        "ngx-toastr": "^14.1.3",
         "node-sass": "^5.0.0",
         "oidc-client": "^1.11.3",
         "popper.js": "^1.16.0",
         "protractor": "~5.4.2",
         "rxjs": "^6.6.7",
+        "save": "^2.4.0",
+        "scriptjs": "^2.5.9",
         "ts-node": "~8.4.1",
         "tslint": "~5.20.0",
         "zone.js": "0.9.1"
