arreglado el front

--- a/ClientApp/angular.json
+++ b/ClientApp/angular.json
@@ -30,7 +30,9 @@
                             "src/assets/js/jquery.min.js",
                             "src/assets/js/jquery.zoom.min.js",
                             "src/assets/js/nouislider.min.js",
-                            "src/assets/js/slick.min.js"
+                            "src/assets/js/slick.min.js",
+                            "src/assets/js/mercadopagojs.js"
+
                         ]
                     },
                     "configurations": {
