--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve --proxy-config proxy.config.json",
+        "start": "ng serve --proxy-config proxy.conf.json",
         "build": "ng build",
         "build:ssr": "ng run ProyectoFinalFront:server:dev",
         "test": "ng test",
@@ -16,15 +16,19 @@
         "@angular/common": "8.2.12",
         "@angular/compiler": "8.2.12",
         "@angular/core": "8.2.12",
+        "@angular/fire": "^5.4.2",
         "@angular/forms": "8.2.12",
         "@angular/platform-browser": "8.2.12",
         "@angular/platform-browser-dynamic": "8.2.12",
         "@angular/platform-server": "8.2.12",
         "@angular/router": "8.2.12",
+        "@firebase/app-compat": "^0.1.5",
         "@nguniversal/module-map-ngfactory-loader": "8.1.1",
         "@types/jquery": "^3.5.7",
+        "angularfire2": "^5.4.2",
         "bootstrap": "^4.6.0",
         "core-js": "^3.8.3",
+        "firebase": "^7.24.0",
         "jquery": "^3.6.0",
         "mercadopago": "^1.5.8",
         "ngx-mercadopago": "0.0.6",
@@ -33,6 +37,7 @@
         "node-sass": "^5.0.0",
         "oidc-client": "^1.11.3",
         "popper.js": "^1.16.0",
+        "promise-polyfill": "8.2.0",
         "protractor": "~5.4.2",
         "rxjs": "^6.6.7",
         "save": "^2.4.0",
@@ -58,7 +63,12 @@
         "karma-coverage-istanbul-reporter": "~2.1.0",
         "karma-jasmine": "~2.0.1",
         "karma-jasmine-html-reporter": "^1.5.4",
-        "typescript": "3.5.3"
+        "typescript": "3.5.3",
+        "@angular-devkit/architect": "<0.900 || ^0.900.0-0 || ^9.0.0-0",
+        "firebase-tools": "^7.12.0",
+        "fuzzy": "^0.1.3",
+        "inquirer": "^6.2.2",
+        "inquirer-autocomplete-prompt": "^1.0.1"
     },
     "optionalDependencies": {
         "node-sass": "^5.0.0",
