--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -31,6 +31,7 @@
         "firebase": "^7.24.0",
         "jquery": "^3.6.0",
         "mercadopago": "^1.5.8",
+        "netlify-cli": "^6.14.25",
         "ngx-mercadopago": "0.0.6",
         "ngx-spinner": "^12.0.0",
         "ngx-toastr": "^14.1.3",
